# FruitFlyVideo

./: .gitignore  analyze_predictions.ipynb  dvr-scan.cfg  pyproject.toml
Peak_Detection/: bouts_std.pkl  filter_and_extract_predictions.ipynb  filtered_bouts_std.pkl  removed_bouts_std.pkl  test.pkl  utils.py
