[tool.poetry]
name = "fruitflyvideo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = ">=1.1.0,<1.6.0"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
scikit-learn = ">=0.24.0,<1.3.0"
scipy = "^1.11.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
